# neural_security_system

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  all  args_helper.hpp  async_publish  async_publish.cpp  build.sh  cameras-sample.yaml  common.hpp  easy_installer.sh  environment.sh  main.cpp  main.hpp  neural_security_system  ocv_common.hpp  start_neural_security_system.sh
models/tiny_yolov3/FP16/: frozen_tiny_yolo_v3.xml
new_version/: Makefile  build.sh
